fix: fixed issue with collapse button

--- a/src/components/styles/NavBar.css
+++ b/src/components/styles/NavBar.css
@@ -20,26 +20,29 @@
     transform: translateY(-100%);
 }
 
-
 .navbar-collapse-btn {
     position: absolute;
     left: 50%;
-    bottom: 8px;
+    bottom: -15px;
     transform: translateX(-50%);
     width: 32px;
     height: 32px;
     border-radius: 50%;
     background-color: var(--navbar-bg, var(--surface-bg));
     border: 1px solid var(--border-color);
+    color: var(--primary-color);
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--text-color-light);
     cursor: pointer;
 }
 
+.navbar-wrapper.collapsed .navbar-collapse-btn {
+    bottom: -25px;
+}
+
 body.dark-mode .navbar-collapse-btn {
-    color: var(--text-color-dark);
+    color: var(--primary-color);
     background-color: var(--navbar-bg);
 }
 
@@ -98,6 +101,7 @@ body.dark-mode .nav-link {
 body.dark-mode .nav-link:hover {
     color: var(--primary-color);
 }
+
 .navbar-search-form {
     display: flex;
     align-items: center;
